# workshop_estrutura

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  main.py  mkdocs.yml  notes.txt  objects.inv  pyproject.toml
app/: main.py
app/pipeline/: __init__.py  extract.py  load.py  pipeline.py  transform.py
data/output/: output.xlsx
docs/: extract.md  index.md  load.md  transform.md
extract/: index.html
load/: index.html
search/: search_index.json
tests/: __init__.py  integration_test.py  test_pipeline.py  unit_test.py
transform/: index.html
