[tool.poetry]
name = "workshop-estrutura"
version = "0.1.0"
description = "projeto de etl"
authors = ["Renan Viana <renanjviana@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
pandas = "^2.1.3"
pandas-stubs = "^2.1.1.230928"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
