[tool.poetry]
name = "workshop-estrutura"
version = "0.1.0"
description = "projeto de etl"
authors = ["Renan Viana <renanjviana@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
pandas = "^2.1.3"
pandas-stubs = "^2.1.1.230928"
openpyxl = "^3.1.2"
pytest = "^7.4.3"
isort = "^5.12.0"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
taskipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = """
isort .
black .
"""
